# daylistNotis

./: .gitignore  CMakeLists.txt  README.md  flake.nix
.direnv/: flake-profile-2-link
includes/: ccpotify.h  cppgmail.h  readTxt.h
includes/base64/: base64.hpp
src/: daylistNotis.cpp  main.cpp
